objects/Environment__c.object
<CustomObject>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Pro</fullName>
                </value>
                <value>
                    <fullName>Developer Clone</fullName>
                </value>
                <value>
                    <fullName>Developer Pro Clone</fullName>
                </value>
                <value>
                    <fullName>Partial Copy</fullName>
                </value>
                <value>
                    <fullName>FULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>4th Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_By_Date__c</fullName>
        <label>Ready By Date</label>
        <type>Date</type>
    </fields>
</CustomObject>